styles/app.css
/* ... */
.pIxPdfuNasUDLbEDmuK_ /* Friend Activity - Jam Card */ {
  background-color: var(--background-base);
  border: var(--default-border);
}

.jGcEaPyhr1c_janM2uRF /* Friend Activity - Card */ {
  background-color: var(--background-base);
  padding: 8px 12px;
  border: var(--default-border);
  border-radius: var(--m-br);
}

.vfrdRkOiUHFQZ8YxDEyK /* New fullscreen bg */ {
  opacity: 0.2;
  backdrop-filter: blur(1rem);
}

.QgD5n5t4yCMPYSrZ9Ecl /* Home card to left transition */ {
  --x: calc(var(--container-width, 100vw) * -1);
  transform: translate3d(var(--x), 0, 0);
}

.OemaZktMXaRcYQ5bcfLZ /* Friend activity card wrapper */ {
  gap: 8px;
}

/* ========== Modals ========== */
.GenericModal__overlay {
  background-color: rgba(var(--clr-shadow-rgb), 0.5);
}

.floating.main-embedWidgetGenerator-container {
  box-shadow: 4px 4px 32px 2px var(--clr-shadow);
}
.N9tnwm0XDrt_eGJd2D2A:has(._kfmGT75UTPoF_D2afwa) /* ctrl + k modal has cards */,
.zZMsUUWG29PYcwWPXhOV:not(._kfmGT75UTPoF_D2afwa) /* ctrl + k search bar not having cards */,
.aOxbsZDBlepfQptv_EfI,
.main-trackCreditsModal-container,
.t1hN4Ju87afc5N5fDTnm /* clear cache modal */,
.NiqTdDnFi5KAXoGukrdo /* artist modal dialog */,
.main-embedWidgetGenerator-container {
  background-color: rgba(var(--clr-surface-rgb), 0.7);
  backdrop-filter: blur(32px) saturate(1.5);
  border: var(--default-border);
  border-radius: var(--l-br);
  max-height: 80vh;
}
dialog[aria-describedby="clear-cache-dialog-heading"] {
  animation: none !important;
  transition: var(--default-transition) !important;
  &[open] {
    opacity: 1;
  }
}

.main-trackCreditsModal-mainSection {
  padding: 8px 12px 0 16px;
}

.main-trackCreditsModal-originalCredits {
  padding-bottom: 8px;
}

.main-trackCreditsModal-header {
  padding: 8px 16px;
  align-items: center;
}

.main-trackCreditsModal-creditsGroup,
.main-trackCreditsModal-sectionTitle,
.main-trackCreditsModal-originalCredits > p {
  padding: 6px 8px;
  margin: 4px 0;
  border: var(--default-border);
  border-radius: var(--br);
  background-color: rgba(var(--clr-secondary-container-rgb), 0.5);
  color: var(--clr-on-secondary-container) !important;
}

.main-trackCreditsModal-container h1,
.main-type-alto {
  font-family: var(--encore-title-font-stack);
  font-size: 1.5rem;
}

/* ==========  Artist Modal ========== */
.uJjmxe0T11dUVeW6Biz8 /* Image container */ {
  background-color: rgba(var(--clr-surface-rgb), 0.75) !important;
  border-bottom: var(--default-border);
}
.T_AmQPlZ6wvE819I7A0D /* left cards */ {
  margin-bottom: -8px;
}

.iPbZsbl5dAihNIDVwijL {
  display: flex;
  justify-content: center;
  padding: 2rem 16px;
}

.zQy0G59IX5G4Cc9AtWRT,
.TkEnV1bItcSb11Yb8h7h /* Follower Count Card */,
.NPv26QCDgdnwsPOlYJmQ /* Places */ {
  height: fit-content;
  padding: 12px 12px;
  margin: 2px 0;
  background-color: rgba(var(--clr-secondary-container-rgb), 0.5);
  border-radius: var(--m-br);
  min-width: 10rem;
  border: var(--default-border);
  transition: var(--default-transition);

  &:hover {
    border: var(--hover-border);
  }

  .encore-text-title-medium {
    font-size: 1.5rem;
    color: var(--clr-on-surface-1);
  }

  div,
  div:last-child {
    color: var(--clr-on-secondary-container);
  }
}

.zQy0G59IX5G4Cc9AtWRT,
.TkEnV1bItcSb11Yb8h7h /* Follower Count Card */ {
  background-color: rgba(var(--clr-tertiary-container-rgb), 0.5);
  color: var(--clr-on-tertiary-container);

  div {
    color: var(--clr-on-tertiary-container) !important;
  }
}

.TV2j1oIRIkKH_6D1xP82 /* Main Card */ {
  margin: 0px 8px;
  padding: 12px 16px;
  border-radius: var(--m-br);
  border: var(--default-border);
  background-color: rgba(var(--clr-surface-2-rgb), 0.5);
  height: fit-content;
  transition: all 0.3s ease;

  &:hover {
    border: var(--hover-border);
  }
}

/* Top in the world card */
.tLjX9htIKD_OCmEX01UN,
.T_AmQPlZ6wvE819I7A0D .tLjX9htIKD_OCmEX01UN {
  width: 10rem;
  height: 4rem;
  margin: 0 0 4px;
  padding: 12px;
  border-radius: var(--m-br);
  background-color: rgba(var(--clr-primary-container-rgb), 0.9);
  border: var(--default-border);
  transition: all 0.3s ease;

  &:hover {
    border: var(--hover-border);
  }

  div {
    line-height: 8px;
    position: relative;
    color: var(--clr-on-primary-container);
  }
  div:first-child {
    top: 8px;
  }
  div:last-child {
    top: 1.25rem;
  }
}

.OyLgnahIHw63684ABRBF /* Avatar card (Posted by) */ {
  margin-top: 16px;
  background-color: rgba(var(--clr-surface-3-rgb), 0.5);
  width: fit-content;
  padding: 4px 16px 4px 8px;
  border-radius: var(--m-br);
  border: var(--default-border);
  transition: var(--default-transition);

  &:hover {
    border: var(--hover-border);
    background-color: rgba(var(--clr-surface-4-rgb), 0.5);
  }
}
.main-avatar-avatar.KguYS3oppxDrMNpTUJcB img,
.main-avatar-placeholderWrapper {
  border-radius: var(--br);
}

.DVWIV41y6daOMjQKR8Zj /* Links */ {
  margin-top: 0;
}
.DVWIV41y6daOMjQKR8Zj a {
  margin-top: 4px;
  padding: 12px 8px;
  background-color: rgba(var(--clr-tertiary-container-rgb), 0.5);
  color: var(--clr-on-tertiary-container);
  border-radius: var(--m-br);
  border: var(--default-border);
  text-decoration: none !important;

  &:hover {
    border: var(--hover-border);
  }
}

/* Settings page */
div[data-testid="settings-page"] {
  left: 50%;
  position: relative;
  transform: translate3d(-50%, 0, 0);
}

/* Lyrics */
.lyrics-lyricsContainer-Provider /* No one cares about the provider :3 */ {
  display: none;
}

.lyrics-lyrics-background {
  background: rgba(var(--clr-primary-container-rgb), 0.1);
}

/* Fix for specific extensions */
#sleep-timer-menu > div,
#sesh-stats-overlay {
  border-radius: var(--m-br);
  border: var(--default-border);
  &:before {
    content: "";
    height: 100%;
    width: 100%;
    position: absolute;
    inset: 0;
    border-radius: inherit;
    z-index: -1;
    -webkit-backdrop-filter: blur(22px) saturate(1.5) brightness(0.75);
    backdrop-filter: blur(22px) saturate(1.5) brightness(0.75);
  }
}
/* ... */

